# Portfolio_ArshWafiqKhanChowdhury

./: INFS 5705 - Best seller classification Amazon.ipynb  README.md
Ai-Agent-Design/ai-governance-agent/: README.md  conftest.py  pyproject.toml  requirements.txt
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/: .env.example  .gitignore
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/config/: settings.py
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/docs/: 03_Architecture_Decision_Record.md  AiGovernance.drawio
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/power-platform/: audit-flow-schema.json
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/scripts/: setup_infrastructure.py  test_queries.py
Ai-Agent-Design/ai-governance-agent/ai-governance-agent/tests/: test_indexer.py  test_search.py
Ai-Agent-Design/ai-governance-agent/docs/: 01_Discovery_Requirements.md  02_Solution_Design_Document.md  04_UAT_Test_Cases.md  05_Deployment_Runbook.md
Ai-Agent-Design/ai-governance-agent/docs/Word Format/: 02_Solution_Design_Document.docx  05_Deployment_Runbook.docx
Ai-Agent-Design/ai-governance-agent/docs/word-docs/: 03_Architecture_Decision_Record.docx  04_UAT_Test_Cases.docx
Ai-Agent-Design/ai-governance-agent/knowledge-base/: README.md
Ai-Agent-Design/ai-governance-agent/power-platform/: copilot-studio-config.md
Ai-Agent-Design/ai-governance-agent/scripts/: run_indexer.py
Ai-Agent-Design/ai-governance-agent/src/: __init__.py
Ai-Agent-Design/ai-governance-agent/src/indexer/: __init__.py  document_processor.py  (+2 more)
(+70 files in other folders)
